# fastapi-template

./: .editorconfig  .gitlint  .pre-commit-config.yaml  README.md  Taskfile.yaml  pyproject.toml
src/: main.py
src/routers/health/: health.py
